fixed footer to be always stuck at bottom

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+  position: relative;
+  margin: 0;
+  min-height: 100%;
+}
+html {
+  height: 100%;
+} */
